--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,14 +6,8 @@
     tools:context="cn.example.mobilesafe.activities.HomeActivity">
 
     <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:gravity="center"
-        android:background="#8866ff00"
+        style="@style/TitleStyle"
         android:text="功能列表"
-        android:textSize="22sp"
-        android:textColor="@color/black"
         />
 
     <TextView
@@ -36,7 +30,8 @@
         android:layout_height="0dp"
         android:layout_weight="1"
         android:numColumns="3"
-        android:verticalSpacing="20dp">
+        android:verticalSpacing="20dp"
+        android:paddingTop="30dp">
         </GridView>
 
 </LinearLayout>
