--- a/app/src/main/res/layout/activity_lost_find.xml
+++ b/app/src/main/res/layout/activity_lost_find.xml
@@ -19,6 +19,7 @@
             android:text="安全号码" />
 
         <TextView
+            android:id="@+id/tv_safe_phone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="13812345678"
@@ -43,11 +44,12 @@
             android:text="防盗保护是否开启" />
 
         <ImageView
+            android:id="@+id/iv_lock"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/unlock" />
+            android:src="@drawable/unlock" />
     </RelativeLayout>
 
     <TextView
