--- a/app/src/main/res/layout/activity_setup2.xml
+++ b/app/src/main/res/layout/activity_setup2.xml
@@ -23,6 +23,7 @@
         android:text="就会发送报警短信" />
 
     <cn.example.mobilesafe.view.SettingItemView
+        android:id="@+id/siv_sim"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         mobilesafe:title="点击绑定sim卡"
