--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -18,6 +18,29 @@
         mobilesafe:desc_on="自动更新已开启"
         mobilesafe:desc_off="自动更新已关闭"
         >
-
     </cn.example.mobilesafe.view.SettingItemView>
+
+    <cn.example.mobilesafe.view.SettingItemView
+        android:id="@+id/siv_address"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        mobilesafe:desc_off="归属地显示已经关闭"
+        mobilesafe:desc_on="归属地显示已经开启"
+        mobilesafe:title="电话归属地显示设置"
+        >
+    </cn.example.mobilesafe.view.SettingItemView>
+
+    <cn.example.mobilesafe.view.SettingClickView
+        android:id="@+id/scv_address_style"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+    </cn.example.mobilesafe.view.SettingClickView>
+
+    <cn.example.mobilesafe.view.SettingClickView
+        android:id="@+id/scv_address_location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        >
+    </cn.example.mobilesafe.view.SettingClickView>
 </LinearLayout>
