--- a/app/src/main/res/layout/dialog_set_password.xml
+++ b/app/src/main/res/layout/dialog_set_password.xml
@@ -6,15 +6,8 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#66ff6600"
-        android:gravity="center"
-        android:padding="10dp"
         android:text="设置密码"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
+        style="@style/DialogTitleStyle"/>
 
     <EditText
         android:id="@+id/et_password"
