--- a/app/src/main/res/layout/dialog_input_password.xml
+++ b/app/src/main/res/layout/dialog_input_password.xml
@@ -5,14 +5,9 @@
     android:orientation="vertical">
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="#66ff6600"
-        android:gravity="center"
-        android:padding="10dp"
+        style="@style/DialogTitleStyle"
         android:text="输入密码"
-        android:textColor="@color/black"
-        android:textSize="20sp" />
+         />
 
     <EditText
         android:id="@+id/et_password"
