--- a/app/src/main/res/layout/activity_atools.xml
+++ b/app/src/main/res/layout/activity_atools.xml
@@ -23,4 +23,18 @@
         android:textColor="@color/black"
         android:textSize="20sp" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button"
+        android:clickable="true"
+        android:drawableLeft="@android:drawable/ic_menu_camera"
+        android:drawablePadding="5dp"
+        android:gravity="center_vertical"
+        android:onClick="backupSms"
+        android:padding="10dp"
+        android:text="短信备份"
+        android:textColor="@color/black"
+        android:textSize="20sp" />
+
 </LinearLayout>
